# certopt

./: .gitignore  README.md  pyproject.toml
configs/: sqlstorm_job.json  sqlstorm_stackoverflow.json  sqlstorm_tpcds.json  sqlstorm_tpch.json  verieql_calcite.json  verieql_leetcode.json  verieql_literature.json
results/: verieql_baseline_times.json
scripts/: analyze_results.py  analyze_spurious.py  audit_paper_numbers.py  benchmark_job_duckdb.py  build_sqlstorm_sample.py  check_progress.py  extract_verieql_times.py  filter_sqlstorm.py  gen_ablation_plots.py  gen_job_complex_plots.py  gen_job_complex_tables.py  gen_paper_tables.py  gen_sqlstorm_full_llm.py  gen_sqlstorm_llm_rewrites.py  gen_sqlstorm_plots.py  gen_sqlstorm_tables.py  gen_verieql_plots.py  prove_verieql_bug.py  run_ablations.sh  run_ablations_compositional.sh  run_ablations_final.sh  run_ablations_k45.sh  run_benchmarks.sh  run_bird_family_ablation.py  run_eval.py  run_optimizer.py  run_sqlstorm_full.sh  run_sqlstorm_full_llm.sh  run_sqlstorm_full_llm_reeval.sh  run_sqlstorm_full_orig_reeval.sh  test_certificate_replay.py  validate_witnesses.py
tests/: audit_spotit.py  audit_verieql_direct.py  audit_verieql_exact_k.py  conftest.py  test_backlog_batch2.py  test_backlog_batch3.py  test_backlog_batch4.py  test_cegar_refinement.py  test_compositional.py  test_cost_estimator.py  test_encode_z3.py  test_equivalence.py  test_expr_cache.py  test_extended_sql.py  test_fix13.py  test_ir_types.py  test_lazy_combos.py  test_like_encoding.py  test_llm_repair.py  test_normalization.py  test_optimizer_e2e.py  (+14 more)
(+1152 files in other folders)
